ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src

EXTRA_DIST = README.md NEWS COPYING COPYING_permissive \
	     COPYING_gplcopyleft COPYING_noncommercial \
	     bootstrap setup_src.sh setup

docdir = @docdir@
doc_DATA = README.md NEWS COPYING COPYING_permissive \
	   COPYING_gplcopyleft COPYING_noncommercial
